tests/base/invalid/VarDecl_CompileFail_4.whiley


void ::main(System.Console sys):
    x = y
    sys.out.println(Any.toString(x))
